Wrap the dropdown in order to stop event propagation.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -93,3 +93,7 @@ body{
 .tracker-dropdown{
 	margin-left: -5px;
 }
+
+.tracker-dropdown-wrap{
+	display: inline-block;
+}
